# robomaster-c-board-stm32f407ighx-spl

./: .clangd  .gitignore  CMakeLists.txt  archive.py  dev.md  dev.py  toolchain-arm-none-eabi.cmake
chat-history/: 2025.09.28_1.txt
debug-panel/: MOTOR_SELECTION.md  change_motor.py  config.json  hist_1.txt  main.py  main_v2.py  map.json  monitor_config.json  panel.json  pyproject.toml
debug-panel/modules/: config.py  config_v2.py  connection_panel.py  control_panel.py  control_panel_v2.py  data_monitor.py  data_monitor_v2.py  data_source_panel.py  elf_parser.py  graph_panel.py  graph_panel_v2.py  gui.py  map_parser.py  openocd_interface.py  openocd_manager.py
inc/: bsp.h  bsp_mod.h  it.h  led.h  setup.h  stm32f4xx_conf.h  type.h  uart.h  uart_dma.h  uart_it.h  utils.h
inc/app/: cron_job.h  send_back.h
inc/bsp/: cron.h  led.h  setup.h  uart.h
inc/bsp/uart/: dma.h  it.h
keil-convertor/: template.uvoptx  template.uvprojx  to-keil.py
keil-ver/: keil_stm32f407ighx.uvoptx  keil_stm32f407ighx.uvprojx
keil_convertor/: to_keil.py
keil_ver/: keil_stm32f407ighx.uvprojx
libs/CMSIS/: system_stm32f4xx.c
src/: app.c  app.h  bsp.c  bsp.h  def.h  hal_callbacks.c  it.c  it.cpp  led.c  main.c  setup.c  stm32f4xx_conf.h  test.c  type.c  type.h  uart.c  uart_dma.c  uart_it.c  utils.c
src/app/: cron_job.c  cron_job.h  mon.c  pid.c  pidv.c  pidx.c  tick.c  uart_handle_cmd.c  uart_send_back.c
src/bsp/: can.c  can_drv.c  clock.c  cron.c  cron.h  led.c  motor.c  setup.c  uart.c  uart_dma.c  uart_dma.h  uart_it.c  uart_it.h
src/bsp/uart/: dma.c  it.c
src/err/: status_led.c
src/mod/: app.c  app.h  bsp.c  bsp.h  err.h
src/utils/: map.c  map.h  modu.c  modu.h  pid_assist.c  pid_assist.h
startup/: startup_stm32f407ighx.s
